# dir-sync

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  gitleaks.yml  pr-gate.yml  release-tag-guard.yml  release.yml  trivy.yml
debian/: changelog  control  copyright  rules
docs/: BUILD.md  TESTING.md
packaging/: README.md  packaging.env
packaging/arch/: PKGBUILD
packaging/brew/: dir-sync.rb
scripts/: build.sh  build_in_docker.sh  install.sh  install_deps.sh  lint.sh  pyinstaller_entry.py  run.sh  run_tests.sh  test_in_docker.sh  uninstall.sh  update.sh
src/dirsync/: __init__.py  app.py  config.py  constants.py  detector.py  notifications.py  scheduler.py  sync.py  toolbar.py  ui_config.py  ui_dialogs.py  validator.py
tests/: test_config.py  test_detector.py  test_notifications.py  test_scheduler.py  test_sync_executor.py  test_validator.py
